--- a/src/WorkToolChatGPTAPI/WorkToolChatGPTAPI.csproj
+++ b/src/WorkToolChatGPTAPI/WorkToolChatGPTAPI.csproj
@@ -16,7 +16,7 @@
 
   <ItemGroup>
     <None Update="entrypoint.sh">
-      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
   </ItemGroup>
 
