--- a/src/WorkToolChatGPTAPI/WorkToolChatGPTAPI.csproj
+++ b/src/WorkToolChatGPTAPI/WorkToolChatGPTAPI.csproj
@@ -1,11 +1,10 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
-    <OutputType Condition="$(RuntimeIdentifier.StartsWith('linux'))">Library</OutputType>
   </PropertyGroup>
 
   <ItemGroup>
