--- a/src/WorkToolChatGPTAPI/appsettings.json
+++ b/src/WorkToolChatGPTAPI/appsettings.json
@@ -5,10 +5,13 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "MySQL": "server=containers-us-west-3.railway.app;userid=root;password=UA3D54vPArH12Tene2Te;database=WorkTool;Port=6517;"
+  },
   "AllowedHosts": "*",
   "ChatGPT": {
-    "Key": "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",
     "MaxCount": 10,
-    "RobotId": "f4203a6cdf654d1f95c3cf92b8b78ac0"
+    "RobotId": "f4203a6cdf654d1f95c3cf92b8b78ac0",
+    "CountId": "1"
   }
 }
