--- a/src/WorkToolChatGPTAPI/appsettings.json
+++ b/src/WorkToolChatGPTAPI/appsettings.json
@@ -6,10 +6,11 @@
     }
   },
   "ConnectionStrings": {
-    "MySQL": "server=containers-us-west-3.railway.app;userid=root;password=UA3D54vPArH12Tene2Te;database=WorkTool;Port=6517;"
+    "MySQL": ""
   },
   "AllowedHosts": "*",
   "ChatGPT": {
+    "Key": "",
     "MaxCount": 10,
     "RobotId": "f4203a6cdf654d1f95c3cf92b8b78ac0",
     "CountId": "1"
