--- a/src/WorkToolChatGPTAPI/appsettings.json
+++ b/src/WorkToolChatGPTAPI/appsettings.json
@@ -6,13 +6,16 @@
     }
   },
   "ConnectionStrings": {
-    "MySQL": ""
+    "MySQL": "server=containers-us-west-3.railway.app;userid=root;password=UA3D54vPArH12Tene2Te;database=WorkTool;Port=6517;"
   },
   "AllowedHosts": "*",
   "ChatGPT": {
     "Key": "",
-    "MaxCount": 10,
+    "OrginId": "org-OGcfoiggpEpxndsOz61FKqs4",
     "RobotId": "f4203a6cdf654d1f95c3cf92b8b78ac0",
-    "CountId": "1"
+    "CacheSecound": 36000,
+    "MaxTokens": 3600,
+    "MaxCount": 10,
+    "CountId": "5"
   }
 }
