--- a/src/WorkToolChatGPTAPI/WorkToolChatGPTAPI.csproj
+++ b/src/WorkToolChatGPTAPI/WorkToolChatGPTAPI.csproj
@@ -15,6 +15,7 @@
     <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.15.1" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="7.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="ToolGood.Words" Version="3.1.0" />
   </ItemGroup>
 
   <ItemGroup>
