修改上下文长度

--- a/src/WorkToolChatGPTAPI/appsettings.json
+++ b/src/WorkToolChatGPTAPI/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "MySQL": "server=containers-us-west-3.railway.app;userid=root;password=UA3D54vPArH12Tene2Te;database=WorkTool;Port=6517;"
+    "MySQL": ""
   },
   "AllowedHosts": "*",
   "ChatGPT": {
@@ -16,6 +16,7 @@
     "CacheSecound": 36000,
     "MaxTokens": 3600,
     "MaxCount": 10,
-    "CountId": "5"
+    "CountId": "5",
+    "MessageCount": 4
   }
 }
